@@ -7,6 +7,8 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ### Changed
 - Loading a new image will now work properly and replace the old image on the
 screen.
+- Selecting "Save Image" when there is no image loaded no longer causes
+problems.  Still not sure why anyone would do this though....
 
 ## [v0.9.0] - 2020-05-25
 ### Added
